# grpc_lab

./: .gitignore  BUILD.bazel  README.md  build.gradle
src/main/java/imagepoll/: DisplayImagePoll.java
src/main/java/io/grpc/examples/imageviewer/: ImageDataSample.java  ImagePollClient.java  ImagePollServer.java  SendingImageDataImpl.java
src/main/java/resources/: input.cfg
