load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "canaldata_proto",
    srcs = ["src/main/proto/canal_data.proto"],
)

java_proto_library(
    name = "imageviewer_java_proto",
    deps = [":imageviewer_proto"],
)

java_grpc_library(
    name = "imageviewer_java_grpc",
    srcs = [":imageviewer_proto"],
    deps = [":imageviewer_java_proto"],
)


java_library(
    name = "examples",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    resources = glob(
        ["src/main/resources/**"],
    ),
    deps = [
        ":imageviewer_java_grpc",
        ":imageviewer_java_proto",
        "@com_google_api_grpc_proto_google_common_protos//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava_guava//jar",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//alts",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//netty",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@io_netty_netty_handler//jar",
    ],
)

java_binary(
    name = "imageviewer-client",
    testonly = 1,
    main_class = "io.grpc.examples.imageviewer.ImagePollClient",
    runtime_deps = [
        ":examples",
    ],
)
